--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,6 @@
 </head>
 
 <body class="page__body">
-
 <header class="page-header">
   <a class="logo page-header__logo">
     <img class="logo__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Логотип Погнали?">
@@ -22,10 +21,164 @@
 
   /*Пропущен красный блок*/
 
-  <section class="user-card">
+  <div class="user-cards">
+    <div class="user-card">
+      <h2 class="visually-hidden">Карточка пользователя</h2>
+      <img class="user-card__avatar" src="https://via.placeholder.com/" width="40px" height="40px" alt="Аватарка">
+      <h3 class="user-card__name">Таня Фирсова</h3>
+      <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
+      <p class="user-card__hash-tag">#ЗОЖ #ПП #Фитнес #пляж #авокадо #смузи</p>
+      <div class="user-card_wrapper"></div>
+      <h4 class="user-card__wishlist">хочет посетить:</h4>
+      <ul class="wishlist__list">
+        <li class="wishlist__item">Шри-ланка</li>
+        <li class="wishlist__item">Тайланд</li>
+        <li class="wishlist__item">Сейшелы</li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__transport">транспорт:</h4>
+      <ul class="transport__list">
+        <li class="transport__list">
+          <img class="transport__img transport__img--plane transport__img--plane--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="самолет">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bus" src="https://via.placeholder.com/" width="40px" height="40px" alt="автобус">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bicycle" src="https://via.placeholder.com/" width="40px" height="40px" alt="велосипед">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--on-foot" src="https://via.placeholder.com/" width="40px" height="40px" alt="пешком">
+        </li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__level">левел:</h4>
+      <span class="user-card__level-img" aria-label="уровень">99</span>
+    </div>
+    <button class="button user-card__button" type="button">Позвать!</button>
+  </div>
 
-  </section>
+  <div class="user-card">
+    <h2 class="visually-hidden">Карточка пользователя</h2>
+    <img class="user-card__avatar" src="https://via.placeholder.com/" width="40px" height="40px" alt="Аватарка">
+    <h3 class="user-card__name">Петя Демин</h3>
+    <span class="user-card__remoteness" aria-label="Удаленность">1500</span>
+    <p class="user-card__hash-tag">#бургер #бар #футбол #концерт #крафт</p>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__wishlist">хочет посетить:</h4>
+      <ul class="wishlist__list">
+        <li class="wishlist__item">Бельгия</li>
+        <li class="wishlist__item">Чехия</li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__transport">транспорт:</h4>
+      <ul class="transport__list">
+        <li class="transport__list">
+          <img class="transport__img transport__img--plane transport__img--plane--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="самолет">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bus transport__img--bus--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="автобус">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bicycle" src="https://via.placeholder.com/" width="40px" height="40px" alt="велосипед">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--on-foot transport__img--on-foot--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="пешком">
+        </li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__level">левел:</h4>
+      <span class="user-card__level-img" aria-label="уровень">80</span>
+    </div>
+    <button class="button user-card__button" type="button">Позвать!</button>
+  </div>
 
+  <div class="user-card">
+    <h2 class="visually-hidden">Карточка пользователя</h2>
+    <img class="user-card__avatar" src="https://via.placeholder.com/" width="40px" height="40px" alt="Аватарка">
+    <h3 class="user-card__name">Марк Смолов</h3>
+    <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
+    <p class="user-card__hash-tag">#рэп #тату #хайпбист #кроссовки #суприм</p>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__wishlist">хочет посетить:</h4>
+      <ul class="wishlist__list">
+        <li class="wishlist__item">США</li>
+        <li class="wishlist__item">Австраалия</li>
+        <li class="wishlist__item">Доминика</li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__transport">транспорт:</h4>
+      <ul class="transport__list">
+        <li class="transport__list">
+          <img class="transport__img transport__img--plane transport__img--plane--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="самолет">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bus" src="https://via.placeholder.com/" width="40px" height="40px" alt="автобус">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bicycle transport__img--bicycle--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="велосипед">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--on-foot" src="https://via.placeholder.com/" width="40px" height="40px" alt="пешком">
+        </li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__level">левел:</h4>
+      <span class="user-card__level-img" aria-label="уровень">25</span>
+    </div>
+    <button class="button user-card__button" type="button">Позвать!</button>
+  </div>
+
+  <div class="user-card">
+    <h2 class="visually-hidden">Карточка пользователя</h2>
+    <img class="user-card__avatar" src="https://via.placeholder.com/" width="40px" height="40px" alt="Аватарка">
+    <h3 class="user-card__name">Лариса Роговая</h3>
+    <span class="user-card__remoteness" aria-label="Удаленность">1,5 м</span>
+    <p class="user-card__hash-tag">#рэп #тату #хайпбист #кроссовки #суприм</p>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__wishlist">хочет посетить:</h4>
+      <ul class="wishlist__list">
+        <li class="wishlist__item">США</li>
+        <li class="wishlist__item">Австралия</li>
+        <li class="wishlist__item">Доминика</li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__transport">транспорт:</h4>
+      <ul class="transport__list">
+        <li class="transport__list">
+          <img class="transport__img transport__img--plane transport__img--plane--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="самолет">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bus" src="https://via.placeholder.com/" width="40px" height="40px" alt="автобус">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--bicycle transport__img--bicycle--active" src="https://via.placeholder.com/" width="40px" height="40px" alt="велосипед">
+        </li>
+        <li class="transport__list">
+          <img class="transport__img transport__img--on-foot" src="https://via.placeholder.com/" width="40px" height="40px" alt="пешком">
+        </li>
+      </ul>
+    </div>
+    <div class="user-card_wrapper">
+      <h4 class="user-card__level">левел:</h4>
+      <span class="user-card__level-img" aria-label="уровень">50</span>
+    </div>
+    <button class="button user-card__button" type="button">Позвать!</button>
+
+    <a class="user-cards__link" href="#">Показать еще</a>
+
+    <div class="reviews">
+      <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+      <button class="reviews__next" type="button">Следующий отзыв</button>
+    </div>
+  </div>
 </main>
 
 <footer class="page-footer">
@@ -44,7 +197,6 @@
           <img class="social__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Вконтакте">
         </a>
       </li>
-      aria-label="Мы в Вконтакте"
       <li class="social__item">
         <a class="social__link social__link--instagram" href="https://www.instagram.com">
           <img class="social__img" src="https://via.placeholder.com/" width="40px" height="40px" alt="Инстаграмм">
